--- a/src/GSvar/SampleSearchWidget.ui
+++ b/src/GSvar/SampleSearchWidget.ui
@@ -219,13 +219,16 @@
         </item>
         <item row="13" column="0">
          <widget class="QLabel" name="label_12">
+          <property name="toolTip">
+           <string>Include only samples with small variants imported in to NGSD.</string>
+          </property>
           <property name="text">
-           <string>include merged:</string>
+           <string>only with variants</string>
           </property>
          </widget>
         </item>
         <item row="13" column="1">
-         <widget class="QCheckBox" name="s_merged">
+         <widget class="QCheckBox" name="s_only_with_variants">
           <property name="text">
            <string/>
           </property>
