GSvar: Added NGSD maintenance step to delete variants of bad samples.

--- a/src/GSvar/MaintenanceDialog.ui
+++ b/src/GSvar/MaintenanceDialog.ui
@@ -91,6 +91,11 @@
        </item>
        <item>
         <property name="text">
+         <string>Delete variants of bad samples</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
          <string>[GenLab]</string>
         </property>
        </item>
