--- a/src/GSvar/RepeatExpansionWidget.ui
+++ b/src/GSvar/RepeatExpansionWidget.ui
@@ -68,7 +68,7 @@
       <item>
        <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>repeat ID:</string>
+         <string>repeat ID/disease:</string>
         </property>
        </widget>
       </item>
