GSvar: added means to create QC plots with/without FFPE for normal samples

--- a/src/GSvar/DBQCWidget.ui
+++ b/src/GSvar/DBQCWidget.ui
@@ -59,7 +59,12 @@
        </item>
        <item>
         <property name="text">
-         <string>tumor</string>
+         <string>tumor (no FFPE)</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>tumor (FFPE)</string>
         </property>
        </item>
       </widget>
