GSvar: added feature to amend the comment of processed samples in sample search

--- a/src/GSvar/EvaluationSheetEditDialog.ui
+++ b/src/GSvar/EvaluationSheetEditDialog.ui
@@ -96,7 +96,7 @@
         <item>
          <widget class="QCheckBox" name="cb_filter_res">
           <property name="text">
-           <string>Repeat Expansions</string>
+           <string>Repeat expansions</string>
           </property>
          </widget>
         </item>
