--- a/src/GSvar/SvWidget.ui
+++ b/src/GSvar/SvWidget.ui
@@ -270,21 +270,21 @@
           </widget>
          </item>
          <item row="0" column="1">
-          <widget class="QLabel" name="label_4">
+          <widget class="QLabel" name="title_info_a">
            <property name="text">
             <string>INFO A:</string>
            </property>
           </widget>
          </item>
          <item row="0" column="0">
-          <widget class="QLabel" name="label_3">
+          <widget class="QLabel" name="title_sv_details">
            <property name="text">
             <string>Format:</string>
            </property>
           </widget>
          </item>
          <item row="0" column="2">
-          <widget class="QLabel" name="label_5">
+          <widget class="QLabel" name="title_info_b">
            <property name="text">
             <string>INFO B:</string>
            </property>
