src/GSvar/RepeatExpansionWidget.*: added support for Straglr
src/NGSDAddVariantsGermline/main.cpp: added support for Straglr

src/cppNGSD/FileLocation*: added support for repeat files/images created by Straglr/StraglrOn

src/cppNGSD/NGSD.cpp: added support for repeat files/images created by Straglr/StraglrOn

src/cppNGSD/resources/NGSD_schema.sql: added column for RE lrGS cutoffs

src/tools-TEST/NGSDAddVariantsGermline_Test.h: added test for importing Straglr REs

--- a/src/GSvar/RepeatExpansionWidget.ui
+++ b/src/GSvar/RepeatExpansionWidget.ui
@@ -297,6 +297,11 @@
      </column>
      <column>
       <property name="text">
+       <string>reads supporting</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
        <string>max. normal</string>
       </property>
      </column>
