--- a/src/GSvar/ProcessedSampleWidget.ui
+++ b/src/GSvar/ProcessedSampleWidget.ui
@@ -401,7 +401,7 @@
               </property>
              </widget>
             </item>
-            <item row="10" column="0">
+            <item row="11" column="0">
              <widget class="QLabel" name="label_24">
               <property name="toolTip">
                <string>Normal sample associated to a tumor sample for pair analysis.</string>
@@ -411,7 +411,7 @@
               </property>
              </widget>
             </item>
-            <item row="10" column="1">
+            <item row="11" column="1">
              <widget class="QLabel" name="normal_sample">
               <property name="text">
                <string>TextLabel</string>
@@ -421,7 +421,7 @@
               </property>
              </widget>
             </item>
-            <item row="11" column="0">
+            <item row="12" column="0">
              <widget class="QLabel" name="label_16">
               <property name="toolTip">
                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Ancestry estimated from variant data using the ngs-bits SampleAncestry tool.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -431,14 +431,14 @@
               </property>
              </widget>
             </item>
-            <item row="11" column="1">
+            <item row="12" column="1">
              <widget class="QLabel" name="ancestry">
               <property name="text">
                <string>TextLabel</string>
               </property>
              </widget>
             </item>
-            <item row="12" column="0">
+            <item row="14" column="0">
              <widget class="QLabel" name="label_10">
               <property name="text">
                <string>comments:</string>
@@ -448,7 +448,7 @@
               </property>
              </widget>
             </item>
-            <item row="12" column="1">
+            <item row="14" column="1">
              <widget class="QLabel" name="comments_processed_sample">
               <property name="minimumSize">
                <size>
@@ -497,6 +497,23 @@
             </item>
             <item row="8" column="1">
              <widget class="QLabel" name="batch_number">
+              <property name="text">
+               <string>TextLabel</string>
+              </property>
+             </widget>
+            </item>
+            <item row="10" column="0">
+             <widget class="QLabel" name="label_35">
+              <property name="toolTip">
+               <string>Determines if processed sample is scheduled for resequencing.</string>
+              </property>
+              <property name="text">
+               <string>resequencing:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="10" column="1">
+             <widget class="QLabel" name="sequencing">
               <property name="text">
                <string>TextLabel</string>
               </property>
