--- a/src/GSvar/MainWindow.ui
+++ b/src/GSvar/MainWindow.ui
@@ -546,6 +546,7 @@
      <addaction name="actionSearchSNVs"/>
      <addaction name="actionSearchCNVs"/>
      <addaction name="actionSearchSVs"/>
+     <addaction name="actionSearchREs"/>
      <addaction name="separator"/>
      <addaction name="actionCohortAnalysis"/>
      <addaction name="separator"/>
@@ -1490,6 +1491,11 @@
   <action name="actionRepeatExpansion">
    <property name="text">
     <string>Repeat expansion</string>
+   </property>
+  </action>
+  <action name="actionSearchREs">
+   <property name="text">
+    <string>Search REs</string>
    </property>
   </action>
  </widget>
