--- a/src/GSvar/SomaticReportVariantDialog.ui
+++ b/src/GSvar/SomaticReportVariantDialog.ui
@@ -149,7 +149,7 @@
     </widget>
    </item>
    <item row="9" column="0">
-    <widget class="QLabel" name="label_3">
+    <widget class="QLabel" name="include_label">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
        <horstretch>0</horstretch>
