REs can now be part of the germline report (#549)

--- a/src/GSvar/SampleSearchWidget.ui
+++ b/src/GSvar/SampleSearchWidget.ui
@@ -134,7 +134,11 @@
          </widget>
         </item>
         <item row="5" column="1">
-         <widget class="QComboBox" name="s_type"/>
+         <widget class="QComboBox" name="s_type">
+          <property name="maxVisibleItems">
+           <number>20</number>
+          </property>
+         </widget>
         </item>
         <item row="6" column="0">
          <widget class="QLabel" name="label_17">
@@ -164,7 +168,11 @@
          </widget>
         </item>
         <item row="8" column="1">
-         <widget class="QComboBox" name="s_tissue"/>
+         <widget class="QComboBox" name="s_tissue">
+          <property name="maxVisibleItems">
+           <number>20</number>
+          </property>
+         </widget>
         </item>
         <item row="10" column="0">
          <widget class="QLabel" name="label_5">
@@ -242,7 +250,11 @@
          </widget>
         </item>
         <item row="9" column="1">
-         <widget class="QComboBox" name="s_ancestry"/>
+         <widget class="QComboBox" name="s_ancestry">
+          <property name="maxVisibleItems">
+           <number>20</number>
+          </property>
+         </widget>
         </item>
         <item row="13" column="1">
          <widget class="QCheckBox" name="s_scheduled_for_resequencing">
@@ -309,6 +321,9 @@
           </item>
           <item row="1" column="1">
            <widget class="QComboBox" name="sys_type">
+            <property name="maxVisibleItems">
+             <number>20</number>
+            </property>
             <property name="sizeAdjustPolicy">
              <enum>QComboBox::AdjustToContents</enum>
             </property>
@@ -346,7 +361,11 @@
            </widget>
           </item>
           <item row="0" column="1">
-           <widget class="QComboBox" name="s_disease_group"/>
+           <widget class="QComboBox" name="s_disease_group">
+            <property name="maxVisibleItems">
+             <number>20</number>
+            </property>
+           </widget>
           </item>
           <item row="1" column="0">
            <widget class="QLabel" name="label_15">
@@ -356,7 +375,11 @@
            </widget>
           </item>
           <item row="1" column="1">
-           <widget class="QComboBox" name="s_disease_status"/>
+           <widget class="QComboBox" name="s_disease_status">
+            <property name="maxVisibleItems">
+             <number>20</number>
+            </property>
+           </widget>
           </item>
           <item row="2" column="0">
            <widget class="QLabel" name="label_24">
@@ -430,7 +453,11 @@
            </widget>
           </item>
           <item row="1" column="1">
-           <widget class="QComboBox" name="p_type"/>
+           <widget class="QComboBox" name="p_type">
+            <property name="maxVisibleItems">
+             <number>20</number>
+            </property>
+           </widget>
           </item>
           <item row="3" column="0">
            <widget class="QLabel" name="label_33">
