GSVar: added NGSD maintainance entry to compare test and production database when importing base data (gene/transcript/disease info/...)

--- a/src/GSvar/MaintenanceDialog.ui
+++ b/src/GSvar/MaintenanceDialog.ui
@@ -96,6 +96,11 @@
        </item>
        <item>
         <property name="text">
+         <string>Compare test and production</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
          <string>[GenLab]</string>
         </property>
        </item>
