GSvar: fixed bugs in report configuration of REs

--- a/src/GSvar/SettingsDialog.ui
+++ b/src/GSvar/SettingsDialog.ui
@@ -321,12 +321,51 @@
      </widget>
      <widget class="QWidget" name="page_view">
       <layout class="QFormLayout" name="formLayout_5">
-       <item row="0" column="0">
+       <property name="horizontalSpacing">
+        <number>3</number>
+       </property>
+       <property name="verticalSpacing">
+        <number>3</number>
+       </property>
+       <property name="leftMargin">
+        <number>3</number>
+       </property>
+       <property name="topMargin">
+        <number>3</number>
+       </property>
+       <property name="rightMargin">
+        <number>3</number>
+       </property>
+       <property name="bottomMargin">
+        <number>3</number>
+       </property>
+       <item row="0" column="0" colspan="2">
         <widget class="QGroupBox" name="groupBox_processedSampleTab">
          <property name="title">
           <string>Processed Sample Tab</string>
          </property>
+         <property name="flat">
+          <bool>true</bool>
+         </property>
          <layout class="QFormLayout" name="formLayout_6">
+          <property name="horizontalSpacing">
+           <number>3</number>
+          </property>
+          <property name="verticalSpacing">
+           <number>3</number>
+          </property>
+          <property name="leftMargin">
+           <number>3</number>
+          </property>
+          <property name="topMargin">
+           <number>3</number>
+          </property>
+          <property name="rightMargin">
+           <number>3</number>
+          </property>
+          <property name="bottomMargin">
+           <number>3</number>
+          </property>
           <item row="0" column="0">
            <widget class="QLabel" name="label_5">
             <property name="text">
