--- a/src/GSvar/RepeatExpansionWidget.ui
+++ b/src/GSvar/RepeatExpansionWidget.ui
@@ -140,6 +140,32 @@
        </widget>
       </item>
       <item>
+       <spacer name="horizontalSpacer_3">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::Fixed</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>10</width>
+          <height>10</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="filter_rc">
+        <property name="toolTip">
+         <string>Filter for repeat expansions that have at least one phenotype matching the phenotypes given in the small variants filter.</string>
+        </property>
+        <property name="text">
+         <string>only with report config</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
